[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/new_scripts/new_opening/main_story.gd" type="Script" id=1]
[ext_resource path="res://fonts/orange-kid/orange kid.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/new_scripts/new_opening/opening_story.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[node name="main_story" type="Node"]
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 800.0

[node name="picture" type="TextureRect" parent="."]
margin_left = 100.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 620.0

[node name="text_box" type="ColorRect" parent="."]
margin_left = 20.0
margin_top = 640.0
margin_right = 780.0
margin_bottom = 780.0
color = Color( 0.160784, 0.882353, 1, 1 )

[node name="name_box" type="ColorRect" parent="text_box"]
margin_left = 20.0
margin_top = -20.0
margin_right = 200.0
margin_bottom = 20.0
color = Color( 0, 0.25098, 1, 1 )

[node name="char_name" type="RichTextLabel" parent="text_box"]
margin_left = 30.0
margin_top = -20.0
margin_right = 190.0
margin_bottom = 20.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false

[node name="text" type="RichTextLabel" parent="text_box"]
margin_left = 20.0
margin_top = 30.0
margin_right = 740.0
margin_bottom = 130.0
custom_fonts/normal_font = SubResource( 2 )
scroll_active = false

[node name="script" type="Node" parent="text_box"]
script = ExtResource( 3 )
